# poreus

./: .envrc  .envrc.local.example  .gitignore  CLAUDE.md  README.md  cabal.project  flake.nix  poreus.cabal
.github/workflows/: ci.yml  release.yml
app/: Main.hs
docs/adr/: 0001-pure-transport-layer.md  0002-two-message-kinds.md  0003-subscribe-first-class.md  0004-inbox-follow-replaces-watch.md  0005-cursor-advance-follow-only.md  0006-aggressive-cleanup.md  0007-vocabulary-recommended-not-enforced.md  0008-flat-wire-format.md  0009-clean-slate-no-migration.md
docs/design/: protocol.md
nix/: outputs.nix  poreus-upx.nix  project.nix  shell.nix
src/: Poreus.hs
src/Poreus/: CLI.hs  Config.hs  DB.hs  Endpoint.hs  Exit.hs  History.hs  Inbox.hs  Inspect.hs  JSON.hs  Lock.hs  Message.hs  Migrate.hs  Profile.hs  Repo.hs  Schema.hs  Task.hs  Time.hs  Types.hs  Watch.hs
src/Poreus/Effects/: Env.hs  FileSystem.hs  Process.hs  Random.hs  Time.hs
test/Poreus/: ConfigSpec.hs  EndpointSpec.hs  HistorySpec.hs  InboxSpec.hs  InspectSpec.hs  LockSpec.hs  MessageSpec.hs  MigrateSpec.hs  ProfileSpec.hs  RepoSpec.hs  TaskSpec.hs  TestM.hs  TimeSpec.hs  TypesSpec.hs  WatchSpec.hs
