cabal-version:      3.0
name:               poreus
version:            0.2.0.0
synopsis:           Deterministic CLI for agent-to-agent message transport
description:
  poreus is a single-binary CLI that manages the registry, message store,
  endpoint discovery, and inbox streaming for the local A2A bus used by
  Claude Code sessions on a single machine. See docs/design/protocol.md
  for the wire format and ADRs.

license:            BSD-3-Clause
author:             Yuriy Lazaryev
maintainer:         yuriy.lazaryev@iohk.io
build-type:         Simple
category:           Development

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

library
  import:           lang
  hs-source-dirs:   src
  exposed-modules:
    Poreus
    Poreus.CLI
    Poreus.Config
    Poreus.DB
    Poreus.Effects.Env
    Poreus.Effects.FileSystem
    Poreus.Effects.Process
    Poreus.Effects.Random
    Poreus.Effects.Time
    Poreus.Endpoint
    Poreus.Exit
    Poreus.History
    Poreus.Inbox
    Poreus.Inspect
    Poreus.JSON
    Poreus.Lock
    Poreus.Message
    Poreus.Profile
    Poreus.Repo
    Poreus.Schema
    Poreus.Time
    Poreus.Types

  build-depends:
    , aeson                 ^>=2.2
    , aeson-pretty          ^>=0.8
    , base                  ^>=4.18
    , bytestring
    , directory
    , filepath
    , mtl                   ^>=2.3
    , optparse-applicative  ^>=0.18
    , process
    , random                ^>=1.2
    , sqlite-simple         ^>=0.4
    , text
    , time
    , transformers
    , unix                  ^>=2.8
    , vector

executable poreus
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base    ^>=4.18
    , poreus

test-suite poreus-test
  import:             lang
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Poreus.ConfigSpec
    Poreus.EndpointSpec
    Poreus.HistorySpec
    Poreus.InboxSpec
    Poreus.InspectSpec
    Poreus.LockSpec
    Poreus.MessageSpec
    Poreus.ProfileSpec
    Poreus.RepoSpec
    Poreus.TestM
    Poreus.TimeSpec
    Poreus.TypesSpec

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , hspec                 ^>=2.11
    , mtl
    , poreus
    , sqlite-simple
    , temporary             ^>=1.3
    , text
    , time
    , transformers
    , unix
